Added endpoint LoggingService#uploadLoggingLevels for POST "/api/admin/logger/all". Added "logging-levels-sample.yaml" and upload corresponding local file to "/api/admin/logger/all" in script "clobber-build-run-and-import.sh".
